[package]
name = "tetrotime"
authors = ["Jakob Westhoff <jakob@westhoffswelt.de>"]
description = "Time meets Tetris - A Tetromino Clock/Stopwatch/Timer for your terminal"
license = "MIT"
version = "1.0.0"
edition = "2021"

[dependencies]
 pixel_loop = { version="0.2.0", default-features = false, features = [
  "crossterm",
] }
# pixel_loop = { git="https://github.com/jakobwesthoff/pixel_loop.git", branch = "main", default-features = false, features = [
#  "crossterm",
#] }
# pixel_loop = { path="../pixel_loop", default-features = false, features = [
#   "crossterm",
# ] }
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }

[[bin]]
name="tetrotime"
path="src/main.rs"
